# dvx-cli

./: .gitignore  AGENTS.md  GOAL.md.example  README.md  TODO.md.example  install-remote.sh  install.sh
dvx/: .gitignore  pyproject.toml  tasks.py
dvx/plans/: PLAN-create-dvx-skills.md  PLAN-refactor-prompts-to-skills.md
dvx/prompts/: escalater.md  finalizer.md  implementer-fix.md  implementer.md  implementor-fix.md  implementor.md  polisher.md  reviewer.md  task-splitter.md
dvx/src/: __init__.py  autopilot.py  claude_session.py  cli.py  consensus.py  context.py  goals.py  interview.py  orchestrator.py  plan_parser.py  state.py
dvx/src/skills/: _template.md  add-tests.md  architect.md  commit-task.md  create-list.md  create-plan.md  critic.md  escalate.md  finalize.md  help.md  implement-fix.md  implement.md  polish.md  resolve-blocked.md  review.md  split-task.md  status.md  update-plan.md
dvx/tests/: test_autopilot.py  test_claude_session.py  test_cli.py  test_cli_interview.py  test_deslop.py  test_finalize_gate.py  test_goals.py  test_install_sh.py  test_interview.py  test_orchestrator.py  test_plan_parser.py  test_state.py
hooks/: install  pre-commit
plans/: FIX-task-count-mismatch.md  ISSUE-finalizer-output.md  PLAN-add-STOP-macro.md  PLAN-add-SYNC-macro.md  PLAN-canonical-install-sh.md  PLAN-install-GOAL-example-file.md  PROPOSAL-bug-fix-workflow.md  TASK-move-dvx-files-to-project-root.md
src/: autopilot.py  cli.py  goals.py  interview.py  orchestrator.py  plan_parser.py
tests/: test_autopilot.py  test_cli.py  test_consensus.py  test_context.py  (+5 more)
(+8 files in other folders)
